--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 		<head>
 		<meta charset="utf-8">
 		<meta name="keywords" content="大数据分析，大数据挖掘，个人简历" />
-		<meta name="description" content="本人做事稳重，对待工作认真，责任心较强，待人真诚，善于沟通，时刻保持学习，积极拥抱变化。喜
-
-欢java 开发，具备一定的软件分析、设计、开发和应用能力，拥有较强的学习能力与团队精神，能够
+		<meta name="description" content="本人做事稳重，对待工作认真，责任心较强，待人真诚，善于沟通，时刻保持学习，积极拥抱变化。热爱工作，具备一定的软件分析、设计、开发和应用能力，拥有较强的学习能力与团队精神，能够
 
 很快的适应工作环境。" />
 		<title>周彦锋简历</title>
@@ -210,7 +208,7 @@
                 <div class="baseDel_ resume_delete_area_">
                           <div class="delete_ resume_delete_"></div>
                           <div class="conDisc baseBorder baseDel resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
-                    <p>主修课程：数学分析、高等代数、概率论与数理统计，数据结构等专业课程，具有扎实的数学理论和严谨的逻辑思维能力。大学时就对机器学习感兴趣，毕业论文也选择的支持向量机这个方向答辩的。</p>
+                    <p>主修课程：数学分析、高等代数、概率论与数理统计，数据结构等专业课程，具有扎实的数学理论和严谨的逻辑思维能力。大学时就对机器学习感兴趣，毕业论文是向量学习机综述。</p>
                   </div>
                         </div>
               </div>
@@ -246,7 +244,7 @@
                           <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
                     <p>1、负责对外部数据的抓取工作以及参与数据分析项目的报告撰写，为乙方提供数据咨询服务。</p>
                     <p>2、在公司培训业务方面我主要担任讲师的角色，负责学员辅导，技术分享，公开课直播等。</p> 
-                    <p>3、借助和高校的业务合作，也曾在河南统计学院通过spss软件讲授过半学期的数据分析方法课程。</p>
+                    <p>3、借助和高校的业务合作，也曾在河南统计学院通过spss软件讲授过一学期的数据分析方法课程。</p>
                   </div>
                         </div>
               </div>
