--- a/index.html
+++ b/index.html
@@ -253,16 +253,16 @@
                 <div class="conTitle"> <span class="conTitle_time">
                   <div class="resume_time baseBorder" contenteditable="true"><strong>2017.3-至今</strong></div>
                   </span> <span class="conTitle_first_company">
-                  <div class="resume_unit baseBorder" contenteditable="true"><strong>河南象聚实业集团</strong></div>
+                  <div class="resume_unit baseBorder" contenteditable="true"><strong>象聚金服</strong></div>
                   </span> <span class="conTitle_post">
                   <div class="resume_job baseBorder" contenteditable="true"><strong>大数据分析师</strong></div>
                   </span> </div>
                 <div class="baseDel_ resume_delete_area_">
                           <div class="delete_ resume_delete_"></div>
                           <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
-                    <p>1、参与公司内部大数据平台的搭建和优化，负责数据需求的引入，指标体系的搭建，计算规则的落地并予以归档。</p>
-                    <p>2、基于公司的spark大数据平台，对集团旗下多款app和网站进行数据埋点，采集，然后对日志数据进行清洗，加工，计算，以及对应分析模型的实现。</p>
-                    <p>3、负责定期撰写公司业务经营的ppt报告，参与公司大数据平台BI系统的开发，实现业务人员可以自定义的网页图表展示，如自定义来访页面的漏斗模型，自定义时间段对比分析模型等。</p>
+                    <p>1、参与公司内部大数据平台的搭建和优化，负责数据需求的引入，指标体系的搭建，计算规则的归档，业务场景的落地如：支付漏斗，用户画像等。</p>
+                    <p>2、根绝业务需求的数据维度，对app和网站进行埋点和数据采集，通过spark大数据平台对日志数据清洗，加工，计算，建模，最终实现对应的分析模型。</p>
+                    <p>3、独立负责撰写公司的数据分析报告，参与公司大数据平台BI系统的开发，将数据分析的结果可视化。</p>
                   </div>
                         </div>
               </div>
@@ -344,9 +344,9 @@
                 <div class="baseDel_ resume_delete_area_">
                           <div class="delete_ resume_delete_"></div>
                           <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
-                    <p>平台介绍:通过前后端无埋点进行数据采集，对历史全量数据和实时数据分别通过Spark和SparkStreaming进行清洗，计算，分发，然后将计算指标或者相应分析模型的结果通过Spark RestApi封装，交由统计前端进行可视化展示。</p>
+                    <p>平台介绍:通过5w事件模型进行数据采集，对历史数据和实时数据分别通过Sparksql和SparkStreaming进行清洗，计算，分发，然后将计算指标或者用户画像的标签通过Spark RestApi封装，交由统计前端进行可视化展示。</p>
                     <p>工作职责:负责前期运营部门数据需求的引入，指标体系的搭建，计算规则的落地，参与Spark计算任务的开发及相应任务脚本的编写，参与到统计前端的echarts可视化展示。</p>
-                    <p>相关技术:Spark、Python、Hbase、Mysql、echarts</p>
+                    <p>相关技术:Spark、kafka、Python、Hbase、Mysql、echarts</p>
                   </div>
                         </div>
               </div>
