--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <ul class="skillUl resume_append_area">
             <li class="baseDel resume_delete_area resume_graph_item">
                       <div class="skillTitle">
-                <input class="resume_value baseBorder" for-key="resume_skill_graph" placeholder="填写你的技能名称" value="Python(Pandas，Scrapy，Django)" />
+                <input class="resume_value baseBorder" for-key="resume_skill_graph" placeholder="填写你的技能名称" value="Python(Pandas，Scrapy，机器学习)" />
               </div>
                       <span><i class="resume_line" for-id="resume_skill_graph" style="width:128px;border-top-style:solid;border-top-width:8px;"></i></span>
                       <div class="delete resume_delete"></div>
@@ -262,7 +262,7 @@
                           <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
                     <p>1、参与公司内部大数据平台的搭建和优化，负责数据需求的引入，指标体系的搭建，计算规则的归档，业务场景的落地如：支付漏斗，用户画像等。</p>
                     <p>2、根绝业务需求的数据维度，对app和网站进行埋点和数据采集，通过spark大数据平台对日志数据清洗，加工，计算，建模，最终实现对应的分析模型。</p>
-                    <p>3、独立负责撰写公司的数据分析报告，参与公司大数据平台BI系统的开发，将数据分析的结果可视化。</p>
+                    <p>3、独立撰写公司的数据分析报告，参与公司大数据平台BI系统的开发，将数据分析的结果可视化展现。</p>
                   </div>
                         </div>
               </div>
@@ -289,7 +289,7 @@
                 <div class="conTitle"> <span class="conTitle_time">
                   <div class="resume_time baseBorder" contenteditable="true"><strong>Python</strong></div>
                   </span> <span class="conTitle_company">
-                  <div class="resume_unit baseBorder" contenteditable="true">擅长爬虫，数据分析，机器学习实践这三个方面，Django正处于学习阶段。</div>
+                  <div class="resume_unit baseBorder" contenteditable="true">擅长爬虫，数据分析，机器学习这三个方面，Django自学中。</div>
                   </span> </div>
               </div>
                       <div class="baseContent baseDel resume_item_items resume_delete_area">
@@ -313,7 +313,7 @@
                 <div class="conTitle"> <span class="conTitle_time">
                   <div class="resume_time baseBorder" contenteditable="true"><strong>其他相关技能</strong></div>
                   </span> <span class="conTitle_company">
-                  <div class="resume_unit baseBorder" contenteditable="true">熟悉linux系统，能较为熟练使用常用linux命令;具有扎实的统计学与数学理论，熟悉机器学习常用的算法模型的基础理论及使用场景，决策树，聚类模型等有过一些实践经验;擅长数据的可视化展示，能熟练运用ppt制作分析报告，同时也熟悉echarts等相关js可视化工具。</div>
+                  <div class="resume_unit baseBorder" contenteditable="true">具有扎实的统计学与数学理论，熟悉聚类，决策树及文本挖掘的相关理论及应用场景;具备互联网保险平台的数据分析及用户画像的实践经验；擅长数据的可视化展示，能熟练运用ppt制作分析报告，同时也熟悉echarts等相关js可视化工具。</div>
                   </span> </div>
               </div>
                     </dd>
@@ -345,7 +345,7 @@
                           <div class="delete_ resume_delete_"></div>
                           <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
                     <p>平台介绍:通过5w事件模型进行数据采集，对历史数据和实时数据分别通过Sparksql和SparkStreaming进行清洗，计算，分发，然后将计算指标或者用户画像的标签通过Spark RestApi封装，交由统计前端进行可视化展示。</p>
-                    <p>工作职责:负责前期运营部门数据需求的引入，指标体系的搭建，计算规则的落地，参与Spark计算任务的开发及相应任务脚本的编写，参与到统计前端的echarts可视化展示。</p>
+                    <p>工作职责:负责跨部门的业务沟通，引入需求，指标搭建，场景落地，参与到数据的清洗，计算，加工，建模当中，负责撰写定期的数据分析报告。</p>
                     <p>相关技术:Spark、kafka、Python、Hbase、Mysql、echarts</p>
                   </div>
                         </div>
