--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <ul class="skillUl resume_append_area">
             <li class="baseDel resume_delete_area resume_graph_item">
                       <div class="skillTitle">
-                <input class="resume_value baseBorder" for-key="resume_skill_graph" placeholder="填写你的技能名称" value="Python(Pandas，Scrapy，机器学习)" />
+                <input class="resume_value baseBorder" for-key="resume_skill_graph" placeholder="填写你的技能名称" value="Python" />
               </div>
                       <span><i class="resume_line" for-id="resume_skill_graph" style="width:128px;border-top-style:solid;border-top-width:8px;"></i></span>
                       <div class="delete resume_delete"></div>
@@ -177,7 +177,7 @@
             <div class="resume_msg baseBorder resume_notice resume_lang_name" notice-key="msg" for-key="name" for-value="html" contenteditable="true">周彦锋</div>
           </h1>
                   <h2>
-            <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">求职目标：大数据（分析/挖掘）工程师</div>
+            <div class="resume_msg baseBorder resume_notice resume_lang_job" notice-key="job" for-key="job" for-value="html" contenteditable="true">求职目标：数据（分析/挖掘）工程师</div>
           </h2>
                 </div>
         <div id="foo_sort"></div>
@@ -289,7 +289,7 @@
                 <div class="conTitle"> <span class="conTitle_time">
                   <div class="resume_time baseBorder" contenteditable="true"><strong>Python</strong></div>
                   </span> <span class="conTitle_company">
-                  <div class="resume_unit baseBorder" contenteditable="true">擅长爬虫，数据分析，机器学习这三个方面，Django自学中。</div>
+                  <div class="resume_unit baseBorder" contenteditable="true">能很熟练使用scrapy爬虫框架及相关的反爬措施，熟悉scrapy-redis分布式爬虫；能熟练使用numpy,pandas及其相关机器学习算法包；能较为熟练使用Django封装数据接口。</div>
                   </span> </div>
               </div>
                       <div class="baseContent baseDel resume_item_items resume_delete_area">
@@ -297,7 +297,7 @@
                 <div class="conTitle"> <span class="conTitle_time">
                   <div class="resume_time baseBorder" contenteditable="true"><strong>Spark</strong></div>
                   </span> <span class="conTitle_company">
-                  <div class="resume_unit baseBorder" contenteditable="true">熟悉Spark分布式框架相关组件，能熟练使用RDD，SparkSQL进行大数据开发工作。</div>
+                  <div class="resume_unit baseBorder" contenteditable="true">熟悉Spark分布式框架相关组件,能独立搭建spark集群,能较为熟练使用RDD算子，SparkSQL进行大数据开发工作。</div>
                   </span> </div>
               </div>
                       <div class="baseContent baseDel resume_item_items resume_delete_area">
@@ -305,7 +305,7 @@
                 <div class="conTitle"> <span class="conTitle_time">
                   <div class="resume_time baseBorder" contenteditable="true"><strong>数据库</strong></div>
                   </span> <span class="conTitle_company">
-                  <div class="resume_unit baseBorder" contenteditable="true">熟悉mysql数据库，较为熟练使用sql语句及相关维护优化，同时也能熟练使用Mongodb和Redis这两种nosql数据库。</div>
+                  <div class="resume_unit baseBorder" contenteditable="true">熟悉mysql数据库，较为熟练使用sql语句及相关维护优化，同时也熟悉Mongodb和Redis这两种nosql数据库。</div>
                   </span> </div>
               </div>
                       <div class="baseContent baseDel resume_item_items resume_delete_area">
@@ -344,7 +344,7 @@
                 <div class="baseDel_ resume_delete_area_">
                           <div class="delete_ resume_delete_"></div>
                           <div class="conDisc baseBorder resume_value" contenteditable="true" data-toggle="tooltip" data-placement="top" title="复制粘贴文字请右键-粘贴为纯文本">
-                    <p>平台介绍:通过5w事件模型进行数据采集，对历史数据和实时数据分别通过Sparksql和SparkStreaming进行清洗，计算，分发，然后将计算指标或者用户画像的标签通过Spark RestApi封装，交由统计前端进行可视化展示。</p>
+                    <p>平台介绍:通过埋点和日志收集进行数据采集，小量数据使用python的科学计算包numpy,pandas等，大量数据及流数据使用Spark和SparkStreaming进行清洗，计算，分发，计算结果通过jupyter结合pyecharts进行可视化展示，或使用django封装数据接口交由前端展示。</p>
                     <p>工作职责:负责跨部门的业务沟通，引入需求，指标搭建，场景落地，参与到数据的清洗，计算，加工，建模当中，负责撰写定期的数据分析报告。</p>
                     <p>相关技术:Spark、kafka、Python、Hbase、Mysql、echarts</p>
                   </div>
